--- a/.github/workflows/deploy-doxygen.yml
+++ b/.github/workflows/deploy-doxygen.yml
@@ -11,8 +11,28 @@ on:
 jobs:
   deploy-doxygen:
     runs-on: ubuntu-latest
+
     steps:
-    - uses: DenverCoder1/doxygen-github-pages-action@v1.3.0
+    - name: Checkout
+      uses: actions/checkout@v4
+      with:
+        submodules: true
+
+    # Update references
+    - name: Git Submodule Update
+      run: |
+        git pull --recurse-submodules
+        git submodule update --remote --recursive
+
+    - name: Commit update
+      run: |
+        git config --global user.name 'Git bot'
+        git config --global user.email 'bot@noreply.github.com'
+        git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
+        git commit -am "Auto updated submodule references" && git push || echo "No changes to commit"
+
+    - name: Generate Doxygen Pages
+      uses: DenverCoder1/doxygen-github-pages-action@v1.3.0
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         branch: gh-pages
