--- a/.github/workflows/deploy-doxygen.yml
+++ b/.github/workflows/deploy-doxygen.yml
@@ -7,6 +7,9 @@ on:
   workflow_dispatch:
   schedule:
     - cron: '0 0 * * *'
+  repository_dispatch:
+    types:
+      - rtduino-doxygen-deploy-trigger-event
 
 jobs:
   deploy-doxygen:
